methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:5: error: not found: value set
  set(0, 6)
  ^