methods.basics.MethodsDogHouse.scala.code
var x = true

def dogHouse()
{
  set(0, 6)
  
  if(x)
  {
    x = false
    
    brushDown()

    for(i <- 1 to 6)
    {
      forward()
    }

    setPos(1, 6)

    left()

    for(i <- 1 to 6)
    {
      forward()
    }

    setPos(1, 6)
  }
}